--- a/templates/builds_project.html
+++ b/templates/builds_project.html
@@ -1,4 +1,4 @@
-<h2>Builds for {{.Name}}</h2>
+<h2>Builds for <a href="{{.ProjectLink}}">{{.Name}}</a></h2>
 <table class="builds">
   <thead>
     <tr>
