--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,6 +18,8 @@
     <nav>
       <ul>
         <li><a href="/">Home</a></li>
+        <li><a href="/organizations">Organizations</a></li>
+        <li><a href="/builds">Builds</a></li>
         <li><a href="/projects">Projects</a></li>
       </ul>
     </nav>
