--- a/templates/builds_project.html
+++ b/templates/builds_project.html
@@ -2,14 +2,16 @@
 <table class="builds">
   <thead>
     <tr>
-      <th>Built</th>
+      <th>Created</th>
+      <th>Status</th>
       <th>Commit</th>
     </tr>
   </thead>
   <tbody>
     {{range .Builds}}
-      <tr>
-        <td class="time"><time>{{.UpdatedAt.Time | FormatTime}}</time></td>
+      <tr class="{{.Status | ToClass}}">
+        <td class="time"><time>{{.CreatedAt.Time | FormatTime}}</time></td>
+        <td>{{.Status}}</td>
         <td class="buildID"><a href="/builds/{{.ProjectName}}/{{.ID}}">{{.Hook.PullRequest.Head.Sha}}</a></td>
       </tr>
     {{end}}
