--- a/templates/builds_project_id.html
+++ b/templates/builds_project_id.html
@@ -1,54 +1,17 @@
 <h2 class="{{.Build.Status}}">
   Build #{{.Build.ID}} of
-  <a href="{{.Build.ProjectLink}}">{{.Job.Hook.Repository.FullName}}</a>
+  <a href="{{.Build.ProjectLink}}">{{.Build.Hook.Repository.FullName}}</a>
   Revision
   <a href="">{{.Build.Hook.PullRequest.Head.Sha}}</a>
 </h2>
 
-<h3>Stdout</h3>
-<pre class="console-output">
-  <code class="shell">{{- .Build.Stdout -}}</code>
-</pre>
+<pre>{{.Build.Hook}}</pre>
 
-<h3>Stderr</h3>
-<pre class="console-output">
-  <code class="shell">{{- .Build.Stderr -}}</code>
-</pre>
+Status: {{.Build.Status}}<br/>
+Started: {{.Build.CreatedAt.Time | FormatTime}}<br/>
+Last update: {{.Build.UpdatedAt.Time | FormatTime}}
 
-{{range .Results}}
-  <div>
-    <h3>Path</h3>
-    {{.NixPath}}
-    <h3>Stdout</h3>
-    <pre class="console-output">
-      <code class="shell">{{- .NixStdout -}}</code>
-    </pre>
-    <h3>Stderr</h3>
-    <pre class="console-output">
-      <code class="shell">{{- .NixStderr -}}</code>
-    </pre>
-    <h3>Error</h3>
-    {{.NixError}}
-  </div>
-{{else}}
-  {{if .Build.Status | eq "pending"}}
-    <div>
-      This build is still running, check back later.
-    </div>
-  {{else}}
-    <div>
-      <h2>Stdout</h2>
-      <pre class="console-output">
-        <code class="shell">
-          {{- .NixLogStdout -}}
-        </code>
-      </pre>
-      <h2>Stderr</h2>
-      <pre class="console-output">
-        <code class="shell">
-          {{- .NixLogStderr -}}
-        </code>
-      </pre>
-    </div>
-  {{end}}
-{{end}}
+<h3>Log</h3>
+<pre class="console-output">
+  <code class="shell">{{- .Build.Log -}}</code>
+</pre>
