--- a/templates/dashboard_builds.html
+++ b/templates/dashboard_builds.html
@@ -1,13 +1,14 @@
 <h2>Recent Builds</h2>
-<table>
+<table class="builds">
   <tbody>
     {{range .Builds}}
-      <tr>
-        <td>{{.Owner}}<br/>{{.Repo}}</td>
+      <tr class="build">
+        <td class="status {{.Status}}">{{.Status}}</td>
+        <td class="owner_repo">{{.Owner}}<br/>{{.Repo}}</td>
         <td>{{.Title}}<br/>{{.BranchName}}</td>
         <td><img src="/img/noun_merge.svg" alt="merge" height="16" /></td>
         <td><img src="/img/noun_commit.svg" alt="commit" style="height: 16px" /></td>
-        <td>#284 {{.Status}}<br/><a href="{{.GithubLink}}" alt="View commit on GitHub">{{.SHA | ShortSHA}}</a></td>
+        <td>#284 {{.Status}}<br/><a href="{{.CommitLink}}" alt="View commit on GitHub">{{.SHA | ShortSHA}}</a></td>
         <td>{{.BuildTime | FormatDuration}}<br/>{{.CreatedAt.Time | FormatTimeAgo}}</td>
       </tr>
     {{end}}
