Experiment with triggering Jenkins jobs

--- a/templates/builds_project_id.html
+++ b/templates/builds_project_id.html
@@ -13,5 +13,5 @@ Last update: {{.Build.UpdatedAt.Time | FormatTime}}
 
 <h3>Log</h3>
 <pre class="console-output">
-  <code class="shell">{{- .Build.Log -}}</code>
+  <code class="shell">{{- .Build.Log.String -}}</code>
 </pre>
