--- a/templates/dashboard_builds.html
+++ b/templates/dashboard_builds.html
@@ -4,12 +4,24 @@
     {{range .Builds}}
       <tr class="build">
         <td class="status {{.Status}}">{{.Status}}</td>
-        <td class="owner_repo">{{.Owner}}<br/>{{.Repo}}</td>
-        <td>{{.Title}}<br/>{{.BranchName}}</td>
+        <td class="owner_repo">
+          {{.Owner}}<br/>
+          {{.Repo}}
+        </td>
+        <td>
+          {{.Title}}<br/>
+          <a href="{{.BranchLink}}">{{.BranchName}}</a>
+        </td>
         <td><img src="/img/noun_merge.svg" alt="merge" height="16" /></td>
         <td><img src="/img/noun_commit.svg" alt="commit" style="height: 16px" /></td>
-        <td>#284 {{.Status}}<br/><a href="{{.CommitLink}}" alt="View commit on GitHub">{{.SHA | ShortSHA}}</a></td>
-        <td>{{.BuildTime | FormatDuration}}<br/>{{.CreatedAt.Time | FormatTimeAgo}}</td>
+        <td>
+          <a href="{{.BuildLink}}">#{{.ID}} {{.Status}}</a><br/>
+          <a href="{{.CommitLink}}" alt="View commit on GitHub">{{.SHA | ShortSHA}}</a>
+        </td>
+        <td>
+          {{.BuildTime | FormatDuration}}<br/>
+          {{.CreatedAt.Time | FormatTimeAgo}}
+        </td>
       </tr>
     {{end}}
   </tbody>
