--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,6 +29,7 @@
     <footer>
       <span class="copy">&copy; 2018 by manveru</span>
       <a href="https://builtwithnix.org"><img alt="built with nix" src="https://builtwithnix.org/badge.svg"/></a>
+      <a href="{{ ScyllaVersionLink }}">{{ ScyllaHostname }}</a>
     </footer>
   </body>
 </html>
